--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
-title: Responsible AI Engineering (RAIE)
+title: Responsible AI Engineering (RAIE) & Agent Engineering
 
 
-subtitle: RAIE series (workshops, special issues)
+subtitle: A collection of workshops, special issues, and other resources on responsible AI engineering and agent engineering.
 ---
